Bug 849624 - Map header and footer to their newly recommended roles. r=surkov